--- a/asset-management-frontend/src/pages/AssetDetailView.css
+++ b/asset-management-frontend/src/pages/AssetDetailView.css
@@ -29,6 +29,7 @@
   margin: 30px ;
   margin-left: 7px;
   width: 800px;
+  gap: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
