--- a/asset-management-frontend/src/pages/AddAssetDetailsForm.css
+++ b/asset-management-frontend/src/pages/AddAssetDetailsForm.css
@@ -19,8 +19,10 @@
 
 /* Asset Detail Card */
 .asset-detail-block {
+  align-items: center;
   background: #fff;
-  padding: 30px;
+  padding: 50px;
+  margin-left: 30px;
   border-radius: 12px;
   margin-bottom: 30px;
   width: 100%;
