--- a/asset-management-frontend/src/pages/AddAssetDetailsForm.css
+++ b/asset-management-frontend/src/pages/AddAssetDetailsForm.css
@@ -22,10 +22,10 @@
   align-items: center;
   background: #fff;
   padding: 50px;
-  margin-left: 30px;
+  margin-left: 1px;
   border-radius: 12px;
   margin-bottom: 30px;
-  width: 100%;
+  width: 500px;
   max-width: 600px;
   color: #333;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
