--- a/asset-management-frontend/src/pages/NSearchUsedAsset.css
+++ b/asset-management-frontend/src/pages/NSearchUsedAsset.css
@@ -1,6 +1,7 @@
 /* NSearchUsedAsset.css */
 
 .issue-asset-container {
+  margin-top: 70px;
   padding: 40px;
   background: linear-gradient(to right, #ffffff, #f5f5f5);
   color: #222;
