--- a/asset-management-frontend/src/pages/TechnicianDashboard.css
+++ b/asset-management-frontend/src/pages/TechnicianDashboard.css
@@ -1,8 +1,31 @@
 /* Assigned Issues List */
 
+/* Heading Styles */
+.dashboard-container{
+  margin-top: 100px;
+  padding: 20px;
+  background-color: #f4f4f4;
+  min-height: 100vh;
+}
+.dashboard-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #333;
+}
+.dashboard-container h2 {
+  font-size: 2rem;
+  margin: 30px 0 10px;
+  text-align: center;
+  color: #2c3e50;
+  font-weight: 600;
+}
+
+
 
 /* Change Password Section */
 .change-password-form {
+
   margin-top: 30px;
   background: #fdfdfd;
   padding: 20px;
