--- a/asset-management-frontend/src/pages/TechnicianIssueDetails.css
+++ b/asset-management-frontend/src/pages/TechnicianIssueDetails.css
@@ -2,10 +2,10 @@
 
 /* Heading Styles */
 
-.dashboard-container1{
+.dashboard-containerr{
   margin-top: 120px;
 }
-.dashboard-container1 h2{
+.dashboard-containerr h2{
   color: #a51829;
   font-size: 28px;
   margin-bottom: 20px;
